# sphinx-multi-theme

./: .dockerignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject-min.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  install.rst  usage.rst
sphinx_multi_theme/: __init__.py  directives.py  multi_theme.py  nodes.py  theme.py  utils.py
tests/integration_tests/: test_version.py
tests/unit_tests/: conftest.py  test_determine_new_doctreedir.py  test_multi_theme.py  test_terminate_forked_build.py  test_theme.py
tests/unit_tests/test_docs/: __init__.py  conftest.py  test_duplicated_theme.py  test_fork_failed.py  test_html_context.py  test_parallel.py  test_poly_theme.py  test_print_files.py  test_single_theme.py  test_toctree_directive.py
tests/unit_tests/test_docs/test-duplicated-theme/: conf.py
tests/unit_tests/test_docs/test-fork-failed/: conf.py
tests/unit_tests/test_docs/test-html-context/: conf.py
tests/unit_tests/test_docs/test-parallel/: conf.py  other.rst
tests/unit_tests/test_docs/test-poly-theme/: conf.py
tests/unit_tests/test_docs/test-poly-theme/fixture/: conf.py
tests/unit_tests/test_docs/test-poly-theme/subprocess/: conf.py  index.rst
tests/unit_tests/test_docs/test-print-files/fail/: conf.py
tests/unit_tests/test_docs/test-print-files/on/: conf.py
tests/unit_tests/test_docs/test-single-theme/incomplete/: conf.py
tests/unit_tests/test_docs/test-single-theme/no-fork/: conf.py
tests/unit_tests/test_docs/test-single-theme/off/: conf.py
tests/unit_tests/test_docs/test-single-theme/on/: conf.py
tests/unit_tests/test_docs/test-toctree-directive/incomplete/: conf.py  index.rst
tests/unit_tests/test_docs/test-toctree-directive/links/: conf.py
tests/unit_tests/test_docs/test-toctree-directive/reversed/: conf.py  index.rst
tests/unit_tests/test_docs/test-toctree-directive/reversed/sub/: page.rst
tests/unit_tests/test_docs/test-toctree-directive/single/: conf.py  index.rst
