[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sphinx-multi-theme"
version = "1.0.0"
description = "A Sphinx extension that builds copies of your docs using multiple themes into separate subdirectories."
readme = "README.md"
authors = ["Robpol86 <robpol86@gmail.com>"]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Plugins",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.urls]
documentation = "https://sphinx-multi-theme.readthedocs.io"
repository = "https://github.com/Robpol86/sphinx-multi-theme"

[tool.poetry.dependencies]
python = ">=3.7"
# Project dependencies.
funcy = "*"
seedir = "*"
Sphinx = "*"

[tool.poetry.group.dev.dependencies]
Sphinx = [
    {version = ">=6.0", python = ">=3.10"},
    {version = "~5", python = "~3.9"},
    {version = "~4", python = "~3.8"},
]
# Linters.
black = "*"
flake8 = "*"
flake8-docstrings = "*"
flake8-import-order = "*"
pep8-naming = "*"
pylint = "*"
# Tests.
beautifulsoup4 = "*"
coverage = {version = "*", extras = ["toml"]}
myst-parser = "*"
pytest = "*"
pytest-cov = "*"
pytest-icdiff = "*"
readthedocs-sphinx-ext = "*"
# Docs.
sphinx-autobuild = "*"
sphinx-copybutton = "*"
sphinx-notfound-page = "*"
sphinx-panels = "*"
sphinx-rtd-theme = ">=1.0"
sphinxext-opengraph = "*"

[tool.black]
line-length = 125
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.coverage.report]
exclude_lines = [
    "#\\s*pragma: no cover",
    "^\\s*from",
    "^\\s*import",
    "^\\s*raise AssertionError",
    "^\\s*raise NotImplementedError",
]

[tool.pylint.FORMAT]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [".venv/*", "build/*", "dist/*"]
max-line-length = 125
reports = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "consider-using-f-string",
    "duplicate-code",
    "fixme",
    "too-many-arguments",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true
min-similarity-lines = 7

[tool.pylint.TYPECHECK]
ignored-modules = ["distutils", "py"]

[tool.pytest.ini_options]
addopts = "--cov-branch --cov-report=term-missing --durations=15 --showlocals --verbose --verbose"
log_level = "DEBUG"
